# rare

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  cmake-linux.yml  cmake-windows.yml
cmake/: AppPackageResources.cmake  BuildStrict.cmake  CopyRuntimeDlls.cmake  FetchBoost.cmake  TargetCopyVendoredDeps.cmake
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  RARE.cppm  Types.cppm
test/: CMakeLists.txt  RARETest.cpp
